--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!doctype html>
+
 <html>
 
 <head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
+<meta charset="utf-8">
+<meta name='viewport' content='width=device-width, initial-scale=1'>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <h1 id="title">Survey Form</h1>
